--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: hcm
 spec:
   selector:
     matchLabels:
-      app: myapp
+      app: hcm
   replicas: 2
   template:
     metadata:
       labels:
-        app: myapp
+        app: hcm
     spec:
       containers:
-      - name: myapp
-        image: nanajanashia/argocd-app:1.2
+      - name: hcm
+        image: hcmuleva/flask_hw:1.0
         ports:
-        - containerPort: 8080
+        - containerPort: 80
