--- a/application.yaml
+++ b/application.yaml
@@ -13,7 +13,7 @@ spec:
     path: dev
   destination: 
     server: https://kubernetes.default.svc
-    namespace: myapp
+    namespace: hcm
 
   syncPolicy:
     syncOptions:
