--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-service
+  name: hcm-service
 spec:
   selector:
-    app: myapp
+    app: hcm
   ports:
-  - port: 8080
+  - port: 80
     protocol: TCP
-    targetPort: 8080
+    targetPort: 80
   
